--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.jagrosh</groupId>
+			<artifactId>JLyrics</artifactId>
+			<version>master-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -65,5 +70,10 @@
 			</plugin>
 		</plugins>
 	</build>
-
+<repositories>
+	<repository>
+		<id>jitpack.io</id>
+		<url>https://jitpack.io</url>
+	</repository>
+</repositories>
 </project>
